2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* invest/about.py (show_about): Removed a dead URL from the about
	dialog. Matt Chisholm/Andrew Burton (Bug #460087).

	* invest/applet.py (ProgramWindow.__init__): Make the pop-up
	window non-resizeable at the suggestion of Matt Chisholm (Bug
	#461345). This means that the window auto-sizes and takes into
	account space left by stocks removed from the drop-down list.

2007-07-30  Claude Paroz <claude@2xlibre.net>

	* invest/about.py: Corrected utf8 to utf-8. Fixes bug #459086.

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>

	* invest/about.py: Use "program-name" property of GtkAboutdDialog.
	"name" does not work anymore in gtk 2.12

2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* invest/about.py:
	Update the encoding to be utf8

2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* invest/quotes.py:
	Fix error when yahoo returns N/A. Fixes bug #413603

2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* invest/widgets.py:
	Fix division by zero, and bug #397941.

2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* data/Makefile.am:
	* data/invest-chart.desktop.in:
	Remove installation of the desktop file. We're an applet after all.
	Fixes #372706.

2006-11-19  Kjartan Maraas  <kmaraas@gnome.org>

	* invest/applet.py: Fix a typo in a comment.

2006-11-11  Davyd Madeley  <davyd@madeley.id.au>

	* invest/chart.py:
	* invest/widgets.py:
	* invest/quotes.py:
	- don't import egg.trayicon, which is seemingly unused

2006-08-13  Davyd Madeley  <davyd@madeley.id.au>

	* data/Makefile.am:
	- correct location of executable in server file

	* data/art/Makefile.am:
	- change install location

	* invest/__init__.py:
	* invest/defs.py.in:
	- set GLADEDIR appropriately. Fixes #350412.

	* invest/about.py:
	- make Close button work, fixes #348684. Thanks to Ray Strode
	  <rstrode@redhat.com>
	
	* invest/applet.py:
	- get GConfClient before attempting to use it. Fixes #350445.
